# fastEASE

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release.yml  test.yml
src/: fastEASE.py  setup.py
src/fastEASE/: __init__.py  fastEASE.py
tests/: test_ease_model.py  test_ml_1m.py
