[tool.poetry]
name = "fastEASE"
version = "0.1.0"
description = "An easy-to-use Python library for building EASE recommendation systems with CUDA"
license = "Apache-2.0"
authors = [
    "Fedor Krasnov <krasnov.fedor2@wb.ru>",
]
maintainers = [
     "Fedor Krasnov <krasnov.fedor2@wb.ru>",
]
readme = "README.md"
homepage = "https://github.com/fkrasnov2/fastEASE"
repository = "https://github.com/fkrasnov2/fastEASE"
keywords = [
    "recsys",
    "recommendation systems",
    "machine learning",
    "AI",
    "personalization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
packages = [
    { include = "src", from = "." },
]


[tool.poetry.dependencies]
python = ">=3.10, <3.13"
scipy = "^1.15.1"
cupy-cuda12x = "^13.3.0"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
isort = "5.13.2"
pylint = "3.1.0"
mypy = "1.13.0"
flake8 = "7.0.0"
bandit = "1.7.8"
pytest = "8.1.1"
radon = "6.0.1"
coverage = "7.5.0"
autopep8 = "2.1.0"
codespell = "2.2.6"
pytest-subtests = "0.12.1"
flake8-docstrings = "1.7.0"
pep8-naming = "0.13.3"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
click = "8.1.7"
gitpython = "3.1.43"


[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]


[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
requires = ["wheel", "build", "setuptools"] # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.
