[project]
name = "fastEASE"
version = "0.3.1"
description = "An easy-to-use Python library for building EASE recommendation systems with CUDA"
license = {file = "LICENSE"}

authors = [
    {name="Fedor Krasnov", email="krasnov.fedor2@wb.ru"},
]
readme = "README.md"
keywords = [
    "recsys",
    "recommendation systems",
    "machine learning",
    "AI",
    "personalization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

requires-python = ">=3.10"
[project.urls]
Homepage = "https://github.com/fkrasnov2/fastEASE"
Repository = "https://github.com/fkrasnov2/fastEASE"

[build-system]
requires = ["wheel", "build", "setuptools>=61.0"] # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.
